force-app/main/default/objects/FieloPLT__Tracker__c/FieloPLT__Tracker__c.object-meta.xml
<CustomObject>
    <description>Internal object. It is generated as a result of processing an Action from a Mission.</description>
    <label>Tracker</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>