force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>It refers to the Object of the Action.</description>
    <inlineHelpText>It refers to the Object of the Action.</inlineHelpText>
    <label>Action</label>
    <referenceTo>FieloPLT__Action__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Tracker</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>