force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__Date__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Date__c</fullName>
    <description>It evaluates the Initial and Final Date from the Challenge.</description>
    <inlineHelpText>It evaluates the Initial and Final Date from the Challenge.</inlineHelpText>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>