force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__Event__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Event which generates the Tracker.</description>
    <inlineHelpText>Event which generates the Tracker.</inlineHelpText>
    <label>Event</label>
    <referenceTo>FieloPLT__Event__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>