force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__IsOffline__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsOffline__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, Tracker is processed offline.</description>
    <inlineHelpText>When ticked, Tracker is processed offline.</inlineHelpText>
    <label>Offline</label>
    <type>Checkbox</type>
</CustomField>