force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, Tracker is processed. Depending on all Challenge settings and status, several related processes may be triggered.</description>
    <inlineHelpText>If ticked, Tracker is processed. Depending on all Challenge settings and status, several related processes may be triggered.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>