force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__IsReverted__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsReverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, Tracker is reverted giving Points back to the Member.</description>
    <inlineHelpText>When ticked, Tracker is reverted giving Points back to the Member.</inlineHelpText>
    <label>Reverted</label>
    <type>Checkbox</type>
</CustomField>