force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Member who performed the Action generating the Tracker.</description>
    <inlineHelpText>Member who performed the Action generating the Tracker.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Trackers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>