force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__MissionMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__MissionMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows which Member and Mission the Tracker belongs to.</description>
    <inlineHelpText>It shows which Member and Mission the Tracker belongs to.</inlineHelpText>
    <label>Mission Member</label>
    <referenceTo>FieloPLT__MissionMember__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>