force-app/main/default/objects/FieloPLT__Tracker__c/fields/FieloPLT__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>FieloPLT__Transaction__c</referenceTo>
    <relationshipLabel>Trackers</relationshipLabel>
    <relationshipName>Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>